--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -21,7 +21,9 @@
     "facebook": "Facebook",
     "twitter": "Twitter",
     "instagram": "Instagram",
-    "copyright": "© 2024 Multilingual News. All Rights Reserved."
+    "copyright": "© 2024 Multilingual News. All Rights Reserved.",
+    "Subscribe": "Subscribe",
+    "Your email address": "Your email address..."
   },
   "blog": {
     "Top News & Articles": "Top News & Articles",
