--- a/client/src/locales/ur.json
+++ b/client/src/locales/ur.json
@@ -21,7 +21,9 @@
     "facebook": "فیس بک",
     "twitter": "ٹوئٹر",
     "instagram": "انسٹاگرام",
-    "copyright": "© 2024 ملٹی لنگول نیوز۔ تمام حقوق محفوظ ہیں۔"
+    "copyright": "© 2024 ملٹی لنگول نیوز۔ تمام حقوق محفوظ ہیں۔",
+    "Subscribe": "سبسکرائب",
+    "Your email address": "آپ کا ای میل"
   },
   "blog": {
     "Top News & Articles": "سب سے اہم خبریں اور مضامین",
